--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -19,27 +19,28 @@ jobs:
     steps:
     - name: Clone Repository
       uses: actions/checkout@v1
-    - name: free disk space
-      run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt clean
-        docker rmi $(docker image ls -aq)
-        df -h
-        /bin/bash ./SCRIPTS/free_disk_space.sh
     - name: Init build dependencies
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-          sudo rm -rf /etc/apt/sources.list.d
-          sudo apt-get -y purge dotnet* ghc* google* llvm* mysql* php* zulu* firefox hhvm
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android/sdk
-          sudo apt-get update
-          sudo apt-get -y --no-install-recommends install build-essential asciidoc binutils bison bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf python3
-          curl https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh  | sed '/#/d' | sed 's/\\//g' | sed 's/exit 0//g' | sed 's/sudo apt -y install//g' | sed 's/sudo apt-get -y install//g' | sed 's/:i386//g' | xargs sudo apt-get -y --no-install-recommends install
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android/sdk
-          git config --global user.name "Actions"
-          git config --global user.email "actions@github.com"
+        docker rmi $(docker images -q)
+        sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+        sudo -E apt-get update -y
+        sudo -E apt-get install -y build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libreadline-dev libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint ccache curl wget vim nano python python3 python-pip python3-pip python-ply python3-ply haveged lrzsz device-tree-compiler scons
+        wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
+        sudo -E apt-get autoremove -y --purge
+        sudo -E apt-get clean -y
+        sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php
+        git clone https://github.com/friendlyarm/repo
+        sudo cp repo/repo /usr/bin/
+    - name: Free Disk Space
+      run: |
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        df -h
     - name: Cleanup Old Action Artifacts
       uses: kolpav/purge-artifacts-action@v1
       with:
@@ -69,6 +70,11 @@ jobs:
         mv ../SEED/config.seed .config
         make defconfig
         chmod -R 755 ./
+    - name: Make Download
+      run: |
+        df -h
+        cd openwrt
+        make download -j10
     - name: Make Toolchain
       run: |
         df -h
@@ -80,7 +86,7 @@ jobs:
         df -h
         cd openwrt
         let make_process=$(nproc)+1
-        make -j${make_process} V=s || make -j${make_process} V=s
+        make -j${make_process} V=s || make -j${make_process} V=s || make -j1 V=s
     - name: Cleaning
       run: |
         df -h
