--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -96,6 +96,7 @@ jobs:
         df -h
         cd openwrt
         let make_process=$(nproc)+1
+        git commit
         git revert bda6f6572be630bcf9a1c8a429e40d8a53033af5
         make -j${make_process} V=s || make -j${make_process} V=s || make -j1 V=s
     - name: Cleaning
